# carla_experiments

./: .gitignore  Openpilot.Dockerfile  README.md  dataset_exploration.ipynb  docker-compose.yml  eval2.sh  explore_carla_comma2k19.ipynb  explore_comma2k19.ipynb  explore_comma_device_data.ipynb  explore_comparison_carla_comma2k19.ipynb  explore_op_deepdive_results.ipynb  explore_stats.ipynb  generate.sh  problem_statement.txt  pyproject.toml  train.sh
carla_experiments/: generate_data.py  generate_resnet_data.py  spawn.py  tutorial_generate_data.py  very_simple_agent.py
carla_experiments/carla_eval/: eval_op_deepdive.py  eval_simple_agent.py  pid_controller.py
carla_experiments/carla_utils/: constants.py  measurements.py  sensors.py  setup.py  spawn.py  types_carla_utils.py  utils.py
carla_experiments/common/: constants.py  openpilot_repo.py  position_and_rotation.py  rlog_types.py  types_common.py  utils_op.py  utils_op_deepdive.py  utils_openpilot.py  visualization.py
carla_experiments/custom_logreader/: custom_logreader.py  download_latest_capnp.py  filereader.py  hw.py  route.py
carla_experiments/datagen/: extract_comma2k19.py  generate_comma2k19_data.py  generate_comma3x_data.py  generate_multisensor_data.py  generate_simple_data.py  navigate.py  tutorial_generate_data.py  utils.py
carla_experiments/datasets/: comma2k19_dataset.py  comma3x_dataset.py  simple_dataset.py
carla_experiments/models/: desire_helper.py  generate_pytorch.py  op_deepdive.py  simple.py  simple_line_following.py  supercombo.py  supercombo_torch.py  supercombo_utils.py
carla_experiments/train/: train_simple.py
openpilot_exploration/carla_eval/: _eval_simple_agent.py  eval_op_deepdive.py  pid_controller.py  utils_op_deepdive.py
openpilot_exploration/carla_utils/: constants.py  setup.py  spawn.py
openpilot_exploration/common/: constants.py  types_common.py  utils_op_deepdive.py  utils_openpilot.py  visualization.py
scripts/: eval.ps1  eval.sh  eval2.sh  ffmpeg_concat.sh  generate.ps1  generate.sh  navigate.ps1  navigate.sh  train.sh
typings/carla/: command.pyi  (+1 more)
(+29 files in other folders)
