[tool.poetry]
name = "carla_experiments"
version = "0.1.0"
description = "Testing repo for the carla api"
authors = ["Ulrik Røsby <ulrik@rosby.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
carla = "0.9.15"
numpy = "1.21.0"
tqdm = "^4.66.1"
mypy = "^1.6.0"
black = "^23.9.1"
flake8 = "^6.1.0"
command = "^0.1.0"
click = "^8.1.7"
wandb = "^0.16.0"
torchmetrics = "^1.2.1"
matplotlib = "3.6"
pandas = "1.4.3"
opencv-python = "^4.9.0.80"
ffmpeg-python = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
